# contracts/openapi/artifact_api.v1.json
@@ -382,6 +382,28 @@
         "summary": "Archive Task"
       }
     },
+    "/readyz": {
+      "get": {
+        "operationId": "readyz_readyz_get",
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "additionalProperties": {
+                    "type": "string"
+                  },
+                  "title": "Response Readyz Readyz Get",
+                  "type": "object"
+                }
+              }
+            },
+            "description": "Successful Response"
+          }
+        },
+        "summary": "Readyz"
+      }
+    },
     "/v1/tasks": {
       "post": {
         "operationId": "create_task_v1_tasks_post",
